--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "framer-motion": "^6.3.3",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "react-email-editor": "^1.6.0",
     "react-icons": "^3.11.0",
     "react-quill": "^1.3.5",
     "react-scripts": "5.0.1",
